--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    justify-self: center;
     align-items: center;
     flex-wrap: wrap;
     margin: 20px;
@@ -51,7 +50,6 @@ button, img{
     border-radius: 50%;
     width: 125px;
     height: 125px;
-    justify-self: center;
 }
 
 .onPlay img{
@@ -64,6 +62,7 @@ button, img{
     font-size: large;
     width: 200px;
     height: 200px;
+    border: white 2px solidgit;
 }
 .yourChoice, .computerChoice{
     justify-content: center;
